# tauri-dtl

./: README.md  README.txt  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
ui/: failure.html  failure.js  index.html  main.js  renderer.js  styles.css  success.html  success.js
